2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: If output file is specified and
	it does not end in output_ext, append output_ext.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in, mkoctfile.cc.in: When compiling files in
	subdirectories, place object files in current directory by
	default.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.cc.in: Accept long options with single -.

2009-12-10  John W. Eaton  <jwe@octave.org>

	* mkoctfile.in: Accept long options with single -.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* HACKING: Clarify gnulib checkout and use.

2009-12-09  John W. Eaton  <jwe@octave.org>

	* configure.ac: Remove URL argument from AC_INIT.
	Use AC_CONFIG_AUX_DIR.  Move AM_INIT_AUTOMAKE after other
	AC_CONFIG setup macros.  Use gl_EARLY and gl_INIT for gnulib.
	Add libgnu/Makefile to the list of AC_CONFIG_FILES.  Eliminate
	special case check for for strftime.
	* bootstrap: New file, from gnulib.
	* bootstrap.conf: New file, from gnulib.  Override bootstrap
	defaults for checkout_only_file, gnulib_tool_option_extras,
	gnulib_name, and source_base.
	(gnulib_modules): Add strftime to the list.
	* autogen.sh: Simply generate makefile fragments and call
	bootstrap to do the rest of the initial setup.
	* Makefile.am (SUBDIRS): Add libgnu to the list.
	* libgnu/Makefile.am: New directory and file.
	* INSTALL: Remove our copy so version from gnulib will be
	distributed.
	* HACKING: New file.

2009-12-08  Rik <octave@nomad.inbox5.com>

	* Makefile.am: add BUGS and OCTAVE.INSTALL to DISTCLEANFILES

2009-12-08  John W. Eaton  <jwe@octave.org>

	* configure.ac: Update gnuplot status message.
	* acinclude.m4 (OCTAVE_PROG_GNUPLOT): Likewise.

2009-12-07  John W. Eaton  <jwe@octave.org>

	* examples/make_int.cc: Delete Emacs local variables.

	* .dir-locals.el: New file.

2009-12-07  John W. Eaton  <jwe@octave.org>

	* examples/firstmexdemo.c, examples/fortdemo.cc,